Final editing results.

--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -907,7 +907,7 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 
 @misc{haskellstack,
   title = {The Haskell Tool Stack},
-  author = {Stack Contributors},
+  author = {Stack{\ }Contributors},
   howpublished = {\url{https://docs.haskellstack.org/en/stable/README/}},
   note = {Accessed: 2017-04-15},
   year = 2017
@@ -915,7 +915,7 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 
 @misc{git_scm,
   title = {Git},
-  author = {The Git Foundation},
+  author = {The{\ }Git{\ }Foundation},
   howpublished = {\url{https://git-scm.com/}},
   note = {Accessed: 2017-04-15},
   year = 2017
@@ -923,7 +923,7 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
 
 @misc{sublime_text,
   title = {Sublime Text: The Text Editor You'll Fall in Love With},
-  author = {Sublime HQ},
+  author = {Sublime{\ }HQ},
   howpublished = {\url{https://www.sublimetext.com/}},
   note = {Accessed: 2017-04-15},
   year = 2017
